Reestructuración contenido ANálisis y Diseño

--- a/Plantilla_TFG_latex/Bibliografia/referencias.bib
+++ b/Plantilla_TFG_latex/Bibliografia/referencias.bib
@@ -200,8 +200,15 @@ doi = {10.1145/3160489.3160492}
 }
 
 @online{planttext,
-  title   = {PlantULM},
-  year    = {2023},
-  url     = {https://plantuml.com/es/},
-  note    = {Accedido el: 29 de Octubre, 2023},
+  title        = {PlantULM},
+  year         = {2023},
+  howpublished = {\url{https://plantuml.com/es/}},
+  note    = {Accedido el: 29 de Octubre, 2023}
+}
+
+@article{de2008aprendizaje,
+  title={Aprendizaje basado en Problemas},
+  author={de Innovaci{\'o}n Educativa, Servicio},
+  journal={Gu{\'\i}as r{\'a}pidas sobre nuevas metodolog{\'\i}as, Disponible en http://innovacioneducativa. upm. es/guias/Aprendizaje\_basado\_en\_problemas. pdf},
+  year={2008}
 }
