--- a/Plantilla_TFG_latex/secciones/05_Analisis.tex
+++ b/Plantilla_TFG_latex/secciones/05_Analisis.tex
@@ -239,66 +239,16 @@ La seguridad de los datos es una prioridad. Por ello, todas las transmisiones de
 \paragraph{Monitorización y Auditoría}
 Finalmente, mantenemos un registro de todas las actividades significativas en la plataforma. Esto permite a los administradores realizar un seguimiento detallado y, si es necesario, controlar las actividades de los usuarios.
 
-\section{Arquitectura del Sistema}
-
-La interacción del usuario en el Frontend se lleva a cabo utilizando tecnologías estándar como HTML sin emplear \textit{frameworks} adicionales para su desarrollo. Además, la interfaz es \textit{Web Responsive}, lo que garantiza su adaptación a variados dispositivos. Desde el punto de vista de la seguridad, se han implementado medidas como la validación de entradas, previniendo así amenazas como los ataques XSS. Los datos de sesión se conservan en el cliente mediante cookies.
-
-Por otro lado, el Backend se ha desarrollado con Flask. Se encarga de administrar las API RESTful y de establecer una conexión ininterrumpida con la base de datos PostgreSQL. La biblioteca \textit{flask\_login} respalda las funcionalidades de autenticación y autorización, aportando una capa de seguridad adicional. La lógica de negocio del sistema reside principalmente en el Sistema de Tutoría Inteligente (ITS). Este subsistema es el encargado de la elección y evaluación de ejercicios, ofreciendo retroalimentación y monitoreando el avance del estudiante.
-
-En relación con la seguridad del Backend, se han establecido roles y restricciones de acceso coherentes con las reglas de negocio previamente determinadas. Aunque la arquitectura actual no posee herramientas concretas orientadas a la escalabilidad, está concebida para ser resistente y estable.
-
-Es esencial destacar que, la estructura general del sistema sigue el patrón Modelo-Vista-Controlador (MVC). La Vista reside en el Frontend, y el Controlador y Nodelo en el Backend \ref{fig:arqsistema}. Este patrón facilita la distinción entre la lógica de la interfaz de usuario y las operaciones, simplificando su mantenimiento.
-
-\begin{figure}[H]
-    \centering
-    \includegraphics[width=\textwidth]{imagenes/ArquitecturaDeSistema.jpeg}
-    
-    \caption{Arquitectura de sistema}
-    \label{fig:arqsistema}
-\end{figure}
-
-\section{Modelos de Comportamiento}
-
-\subsection{Diagrama de Corrección y Evaluación de calidad del código}
-
-El verdadero reto comienza tras la entrega de un ejercicio por parte del estudiante. La lógica de corrección evalúa el código en términos de precisión y calidad. Si un código no alcanza un estándar mínimo, el sistema propone ejercicios adicionales, reforzando así las áreas de mejora del estudiante \ref{fig:correccion}. La justificación detrás de esta lógica se centra en la premisa de que la repetición y el refuerzo son esenciales para consolidar el aprendizaje. Además, al establecer estándares de calidad, se fomentan las buenas prácticas de programación desde las etapas iniciales de formación.
-
-\begin{figure}[H]
-    \centering
-    \includegraphics[width=\textwidth]{imagenes/correcionejercicios.png}
-    
-    \caption{Diagrama de flujo para la corrección del código}
-    \label{fig:correccion}
-\end{figure}
-
-\subsection{Diagrama para la Selección y Evaluación de ejercicios}
-
-El sistema prioriza la progresión estructurada del estudiante. Al ingresar, la plataforma identifica ejercicios en curso o determina el próximo paso en función de los requisitos del módulo. Esta estructura garantiza que, antes de enfrentarse a cualquier tarea, los conceptos teóricos relevantes sean presentados al estudiante \ref{fig:seleccion}. Esta estrategia se fundamenta en la pedagogía moderna, que sugiere que la teoría y la práctica deben ir de la mano para un aprendizaje óptimo.
-
-\begin{figure}[H]
-\centering
-\includegraphics[width=\textwidth]{imagenes/seleccionejercicios.png}
-\caption{Diagrama de flujo para la selección de ejercicios}
-\label{fig:seleccion}
-\end{figure}
-
-
 \section{Modelado de Entidades y sus Relaciones}
 
-En este apartado se va a hablar sobre el modelado de datos, que es esencial para comprender la estructura y las relaciones entre las distintas entidades en una base de datos. Este proyecto gira alrededor de la gestión educativa. Aquí, usuarios como estudiantes y administradores interactúan con módulos, ejercicios, teorías y otros componentes. Las relaciones entre estas entidades garantizan una coherencia y eficiencia en el sistema. 
+El modelado de datos es fundamental para comprender la estructura y relaciones entre las diferentes entidades en una base de datos. En el contexto de este proyecto  entidades como los estudiantes interactúan con elementos como módulos, ejercicios y teorías. Las relaciones entre estas entidades garantizan coherencia y eficiencia en el sistema. El Diagrama Entidad-Relación (ER) \ref{fig:er} proporciona una representación gráfica de estas interacciones. 
 
-El Diagrama Entidad-Relación (ER) \ref{fig:erdiagram} es la representación gráfica. Muestra entidades como tablas y sus interconexiones mediante líneas. Las cardinalidades en las relaciones aportan información sobre cómo interactúan estas entidades.
+Dentro del diagrama, se identifican entidades clave como Usuarios, Ejercicios, Teoría, Requisitos y Modulos. Las interacciones entre estas reflejan la lógica del negocio y las necesidades del sistema. Por ejemplo, un usuario podría estar trabajando en varios ejercicios al mismo tiempo, pero cada tarea realizada es única para ese usuario. De manera similar, un módulo puede contener varios ejercicios y temas teóricos, pero cada uno de estos elementos está vinculado exclusivamente a un módulo.
 
-Este diagrama desvela varias entidades clave: Users, Exercises, Theory y Modules. Las conexiones entre ellas reflejan la lógica de negocio y los requisitos del sistema. Por ejemplo, un usuario puede tener en progreso varios ejercicios. Sin embargo, cada progreso es único para un usuario. En paralelo, un módulo puede albergar múltiples ejercicios y teorías. Aun así, cada uno pertenece solo a un módulo.
-
-
-\newpage
 
 \begin{figure}[H]
     \centering
-    \begin{sideways}
-        \includegraphics[width=1.8\textwidth]{imagenes/er.png}
-    \end{sideways}
-    \caption{Diagrama Entidad-Relación}
-    \label{fig:erdiagram}
+    \includegraphics[width=0.5\textwidth]{imagenes/Entidad-Relacion.png}
+    \caption{Entidad Relación del sistema}
+    \label{fig:er}
 \end{figure}
